<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo5"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nombreAlarma"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/tNombre"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hora"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>

    </LinearLayout>

    <TimePicker
        android:id="@+id/horaInicio"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/background_light"
        android:timePickerMode="spinner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/ChLunes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lunes"
            android:textColor="@android:color/darker_gray" />

        <CheckBox
            android:id="@+id/ChMartes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/martes"
            android:textColor="@android:color/darker_gray" />

        <CheckBox
            android:id="@+id/ChMiercoles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/miercoles"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/ChJueves"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/jueves"
            android:textColor="@android:color/darker_gray" />

        <CheckBox
            android:id="@+id/ChViernes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/viernes"
            android:textColor="@android:color/darker_gray" />

        <CheckBox
            android:id="@+id/ChSabado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sabado"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/ChDomingo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/domingo"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>


    <CheckBox
        android:id="@+id/ChActivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activarAlarma"
        android:textColor="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/BLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="SeleccionaLista"
            android:text="@string/lista"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="392dp" />


        <TextView
            android:id="@+id/LLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/selecionarLista"
            android:textColor="@android:color/holo_red_dark" />

    </LinearLayout>

</LinearLayout>